<resources>
    <string name="app_name">GalArt</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">Error registrando usuario</string>
    <string name="msg_fallo_registro">Error al registrar usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_galart">GalArt</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo (abc@abc.com)</string>
    <string name="msg_telefono">Teléfono (9999-99999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar Lugar</string>
    <string name="bt_actualizar">Actualizar Lugar</string>
    <string name="empleadoAdded">Empleado Agregado</string>
    <string name="noData">No hay datos disponibles</string>
    <string name="seguroBorrar">Esta seguro que desea borrar?</string>
    <string name="delete">Borrar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="error">Error</string>


</resources>